...
              );
            },
            destinations: [
              const NavigationDestination(
                icon: Icon(Icons.chat_bubble_outline),
                selectedIcon: Icon(Icons.chat_bubble),
                label: 'Chats',
              ),
              const NavigationDestination(
                icon: Icon(Icons.tag),
                selectedIcon: Icon(Icons.tag),
                label: 'Channels',
              ),
              const NavigationDestination(
                icon: Icon(Icons.search),
                selectedIcon: Icon(Icons.search),
                label: 'Search',
              ),
...
